<resources>
    <string name="app_name" translatable="false">EjercicioUnoApp</string>
    <string name="formulario">Formulario</string>
    <string name="signes">Signos</string>
    <string name="Nombre">Nombre</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="numero_de_cuenta">Numero de Cuenta</string>
    <string name="correo">Correo</string>
    <string name="comprobar">Comprobar</string>
    <string name="completa_el_campo">Llena todos los campos</string>
    <string name="signe_no_found">No  es posible calcular su signo chino</string>
    <string name="invalid_email">Correo inválido. Revise que su correo se encuentre escrito correctamente y vuelva a intentar.</string>
    <string name="invalid_digits">El número de cuenta debe ser de 9 digitos</string>
    <string name="invalid_date">"Fecha inválida"</string>
    <string name="info" translatable="false">"Info"</string>
    <string name="empty" translatable="false" />


    <string name="age_single">Tu edad es de 1 año</string>
    <string name="age_plu">Tu edad es de %d años</string>

    <string name="capricornio">Capricornio</string>
    <string name="acuario">Acuario</string>
    <string name="picis">Picis</string>
    <string name="aries">Aries</string>
    <string name="tauro">Tauro</string>
    <string name="geminis">Geminis</string>
    <string name="cancer">Cancer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="escorpion">Escorpion</string>

    <string name="signe_zodiacal">Signo Zodiacal: %s</string>
    <string name="signe_chino">Signo Chino: %s</string>


</resources>