<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/formulario"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/blue_gt"
                android:padding="20dp"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:padding="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:textColor="@color/black"
                    android:fontFamily="@font/barlow_regular"
                    android:text="@string/Nombre"
                    android:gravity="center_vertical"
                    />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:padding="10dp"
                    android:inputType="textPersonName"
                    android:autofillHints="name"
                    android:maxLines="1"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/barlow_regular"
                    android:background="@drawable/background_edit_unselected"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:padding="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:textColor="@color/black"
                    android:fontFamily="@font/barlow_regular"
                    android:text="@string/fecha_de_nacimiento"
                    android:gravity="center_vertical"
                    />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/barlow_regular"
                    android:background="@drawable/background_edit_unselected"
                    tools:ignore="LabelFor"
                    android:importantForAutofill="no" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:padding="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:textColor="@color/black"
                    android:fontFamily="@font/barlow_regular"
                    android:text="@string/numero_de_cuenta"
                    android:gravity="center_vertical"
                    />

                <EditText
                    android:id="@+id/editNumCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:padding="10dp"
                    android:inputType="number"
                    android:textSize="15sp"
                    android:maxLength="9"
                    android:textColor="@color/black"
                    android:fontFamily="@font/barlow_regular"
                    android:background="@drawable/background_edit_unselected"
                    tools:ignore="LabelFor"
                        android:importantForAutofill="no" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:padding="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSizeTextViewN"
                    android:fontFamily="@font/barlow_regular"
                    android:text="@string/correo"
                    android:gravity="center_vertical"
                    />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:padding="10dp"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/barlow_regular"
                    android:background="@drawable/background_edit_unselected"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <Button
                android:id="@+id/btnVerify"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/comprobar"
                android:textColor="@color/white"
                android:paddingBottom="4dp"
                android:fontFamily="@font/barlow_bold"
                android:background="@drawable/btn_azul_c"
                android:layout_marginTop="20dp"
                />

        </LinearLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>

